--- a/Issues/2025-12.md
+++ b/Issues/2025-12.md
@@ -28,11 +28,20 @@
 <br />
 
 ## [구글, Antigravity 새로운 IDE 공개 (11/19)](https://blog.google/intl/ko-kr/company-news/technology/gemini-3-developers/)
- > 구글 Antigravity가 'Agent-first' 아키텍처를 기반으로 진짜 에이전트들이 팀플을 하는 듯한 멀티에이전트 개발 환경을 제공한다고 해요. **코드 작성은 기본이고, 빌드·테스트·검증까지 자동으로 처리**해주니 개발자들은 반복 작업에서 한 발 벗어나 더 중요한 일에 집중할 수 있게 된 셈이죠. 또한 이건 꽤 마음에 드는 포인트인데 **복잡한 로그 대신 스크린샷이나 화면 녹화처럼 직관적인 산출물을 제공해서, 개발 과정을 누구라도 이해 가능한 형태로 보여준다**고 합니다. 덕분에 개발자가 아닌 일반인들도 훨씬 자연스럽게 전체 개발 흐름에 참여할 수 있는 환경으로 확장되고 있다는 점이 큰 의미인 것 같아요. (시민개발자(Citizen Developer) 세상에 또 한 발 더 가까워지는 느낌!)
- > `` Agent-first ``, `` Citizen Developer ``
-<br />
+> 구글 Antigravity가 'Agent-first' 아키텍처를 기반으로 진짜 에이전트들이 팀플을 하는 듯한 멀티에이전트 개발 환경을 제공한다고 해요. **코드 작성은 기본이고, 빌드·테스트·검증까지 자동으로 처리**해주니 개발자들은 반복 작업에서 한 발 벗어나 더 중요한 일에 집중할 수 있게 된 셈이죠. 또한 이건 꽤 마음에 드는 포인트인데 **복잡한 로그 대신 스크린샷이나 화면 녹화처럼 직관적인 산출물을 제공해서, 개발 과정을 누구라도 이해 가능한 형태로 보여준다**고 합니다. 덕분에 개발자가 아닌 일반인들도 훨씬 자연스럽게 전체 개발 흐름에 참여할 수 있는 환경으로 확장되고 있다는 점이 큰 의미인 것 같아요. (시민개발자(Citizen Developer) 세상에 또 한 발 더 가까워지는 느낌!)<br />
+> `` Agent-first ``, `` Citizen Developer ``
 <br />
 
+## [OpenAI, GPT-5.1 Codex Max 출시 (11/20)](https://openai.com/index/gpt-5-1-codex-max/)
+> OpenAI가 19일에 드디어 GPT-5.1 Codex Max를 공개했습니다! 기존 GPT-5.1을 코딩 에이전트에 최적화한 모델로, 가장 큰 특징은 'Compaction(압축)' 기술을 통해 수백만 토큰의 문맥을 유지하며 24시간 이상 연속 작업이 가능해졌다는 점입니다. 윈도우(Windows) 환경에서도 네이티브하게 작동하도록 훈련되었으며, SWE-bench Verified에서 77.9%를 기록하며 구글의 Gemini 3 Pro(76.2%)를 제치고 1위를 탈환했습니다. Terminal-Bench 2.0에서도 58.1%로 압도적인 성능을 보여주며, 복잡한 리팩토링이나 디버깅 같은 '호흡이 긴 작업'에서 진가를 발휘한다고 하네요. 다만 METR 평가 결과에 따르면 50% 성공률을 보장하는 작업 지속 시간이 약 2시간 40분 정도로, 24시간 '가동'은 가능하지만 초장기 작업의 신뢰도는 여전히 해결해야 할 과제로 보입니다. 또한 사이버 보안 능력은 역대급이지만 아직 'High' 등급에는 도달하지 못했다는 평도 있네요. 어쨌든 제미나이 3와 GPT-5.1이 번갈아 가며 왕좌를 차지하고 있으니, 개발자 입장에서는 즐거운 비명을 지를 수밖에 없는 AI 코딩 에이전트 전성시대가 열린 것 같습니다!<br />
+> `` GPT-5.1 ``, `` Codex Max ``, `` Agentic Coding ``
+<br />
+
+## [Anthropic, Claude Opus 4.5 출시 (11/25)](https://www.anthropic.com/news/claude-opus-4-5)
+> 앤스로픽이 코딩, 에이전트, 컴퓨터 사용(Computer Use) 분야에서 현존 최고 성능을 자랑하는 'Claude 4.5 Opus'를 정식 출시했습니다. **이전 모델보다 훨씬 똑똑해졌음에도 가격은 3분의 1 수준으로 낮아졌고, 추론 깊이를 조절할 수 있는 기능이 추가되었다고 해요. 특히 인상적인 부분은 'Computer Use' 능력이 대폭 강화되어 화면을 확대(Zoom)해 디테일을 확인하거나, 복잡한 UI를 사람처럼 조작하며 자율적으로 작업을 수행한다는 점입니다. 이제 AI가 단순히 코드를 생성하는 것을 넘어, 실제 개발자처럼 도구를 다루고 화면을 보며 일하는 '진정한 에이전트(Agentic Workflow)'의 시대가 본격화되는 느낌이네요. (SWE-bench 점수가 무려 80.9%라니, 이제 든든한 AI 동료 한 명 채용하는 기분이 들지도 모르겠어요!)
+> `` Anthropic ``, `` Claude Opus 4.5 ``
+<br />
+<br />
 
 # 🏫 조금 더 공부하기
 <br />
